swagger disponivel no endpoint /api-docs e arrumando Handle User from Queue
